# seda

./: pyproject.toml
docs/: api.rst  overview.rst  tutorials.rst
docs/joss/: paper.bib  paper.md
docs/notebooks/: tutorial_evolutionary_models_examination.ipynb  tutorial_ingest_evolutionary_models.ipynb
seda/: models.py  phy_params.py
seda/evolution_aux/ATMO2020/: ATMO_NEQ_strong_mass.txt  config.json  plugin.py
seda/evolution_aux/BHAC2015/: config.json  plugin.py
seda/evolution_aux/Sonora_Bobcat/: config.json  nc+0.0_co1.0_mass  nc+0.5_co1.0_mass  nc-0.5_co1.0_mass  plugin.py
seda/evolution_aux/Sonora_Diamondback/: config.json  hybrid-grav_f2_m+0.5_mass  hybrid-grav_f2_m-0.5_mass  hybrid-grav_f2_m0.0_mass  hybrid_f2_m+0.5_mass  hybrid_f2_m-0.5_mass  hybrid_f2_m0.0_mass  nc_m-0.5_mass  nc_m0.0_mass  plugin.py
tests/: conftest.py  test_phy_params.py
