[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seda"
description = "SEDA: Spectral Energy Distribution Analyzer for forward modeling and empirical analysis of ultracool objects"
readme = "README.md"
# Use dynamic version from setuptools-scm (written to seda/_version.py)
dynamic = ["version"]
keywords = [
  "ultracool objects", "low mass stars", "brown dwarfs", "gas giant planets",
  "spectroscopy", "photometry", "atmospheres", "astronomy", "astrophysics"
]
authors = [{ name = "Genaro Suárez", email = "gsuarez2405@gmail.com" }]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "astropy",
  "corner",
  "dynesty",
  "lmfit",
  "matplotlib",
  "numpy",
  "prettytable",
  "scipy",
  "specutils",
  "spectres",
  "tqdm",
  "xarray",
]

[project.optional-dependencies]
docs = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme>=1.3.0",
  "jupyter",
  "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/suarezgenaro/seda"

[tool.setuptools_scm]
write_to = "seda/_version.py"

[tool.setuptools]
packages = {find = {include = ["seda*"], exclude = ["backups*"]}}
include-package-data = true

[tool.setuptools.package-data]
# Mirror setup.py's package_data config
seda = [
  # Modeled data
  "models_aux/**/*",

  # Evolutionary model data
  "evolution_aux/**/*",

  # Observational data
  "observations_aux/spitzer_irs/*",
  "observations_aux/Suarez_Metchev_2022_tables.dat"
]
